config file update

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
 	<name>fiata Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
+		
+		<!-- Struts -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.3.1.2</version>
+		</dependency>
 
 		<!-- Jersey -->
 		<dependency>
