--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,18 @@
 
 	<display-name>Fiata</display-name>
 
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>
+                org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
+                </filter-class>
+	</filter>
+ 
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
